--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-profile",
   "version": "0.1.0",
+  "homepage": "https://github.com/JimGigantes/react-profile-live",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
