--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-profile",
   "version": "0.1.0",
-  "homepage": "https://github.com/JimGigantes/react-profile-live",
+  "homepage": "https://JimGigantes.github.io/react-profile-live",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
@@ -18,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
